# metarepo

./: .gitignore  .rules-rust.yaml  .rules.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  release-plz.toml  test_mcp.sh  test_meta.sh  test_playwright_mcp.sh
.agents/skills/caveman-compress/: SECURITY.md
.agents/skills/caveman-compress/scripts/: compress.py  validate.py
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: precommit-fast.sh
.claude/skills/dir-to-repo/: SKILL.md
.claude/skills/dir-to-repo/references/: CHANGELOG_NOTES.md
.claude/skills/meta-tool/: SKILL.md
.claude/skills/meta-tool/references/: CHANGELOG_NOTES.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  quick_idea.md  security_vulnerability.md
.github/scripts/: README.md  dir-to-repo.sh  new-bug.sh  new-feature.sh  new-idea.sh
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  security.yml
docs/: AGENT_HOOKS.md  ARCHITECTURE.md  BACKLOG_GROOMING_2026-06-12.md  CONFIG_FORMATS.md  DISABLING_PROJECTS.md  ENHANCEMENT_IDEAS.md  HARNESS_INTEGRATION.md  HELP_DESCRIPTIONS.md  IMPLEMENTATION_PLAN.md  MCP_GATEWAY.md  MODULES.md  PLUGIN_CONFIG.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_V2.md  PLUGIN_INTEGRITY.md  PLUGIN_PROTOCOL_V1.md  RULES.md  RUN_TUI.md  SHELL_COMPLETIONS.md  SKILL_TOOLS.md  TODO.md  WORKTREE.md
docs/qa/: README.md  TESTING_GUIDELINES.md  TESTING_RECOMMENDATIONS.md  TESTING_STRATEGY.md
docs/security/: README.md  SECURITY_HOTFIX.patch  SECURITY_TESTING_STRATEGY.md  implement-security.sh  threat-model.md
examples/: mcp_usage.md
examples/metarepo-module-example/: meta.module.toml
examples/metarepo-module-example/plugin/: greet.sh  plugin.manifest.toml
examples/metarepo-module-example/skills/example-helper/: SKILL.md
examples/metarepo-module-example/skills/example-skill/: SKILL.md
examples/metarepo-plugin-example/: Cargo.toml  README.md
examples/metarepo-plugin-example/src/: lib.rs  main.rs
examples/metarepo-plugin-shell/: README.md  greet.sh  plugin.manifest.toml
examples/plugin-go/: .gitignore  README.md  go.mod  main.go
examples/plugin-node/: README.md  hello.mjs
examples/plugin-python/: README.md  hello.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_injection.rs  path_traversal.rs
gestalt/: Cargo.toml
gestalt/src/: cli.rs  config.rs  lib.rs  main.rs  plugin.rs  simple_main.rs
meta/: CHANGELOG.md  Cargo.toml
meta-core/: CHANGELOG.md  Cargo.toml  README.md
meta-core/src/: config_format.rs  config_setting.rs  formatted_plugin.rs  interactive.rs  lib.rs  module_manifest.rs  output.rs  plugin_base.rs  plugin_builder.rs  plugin_manifest.rs  protocol.rs  security.rs
meta-core/src/tui/: app.rs  keybindings.rs  menu_app.rs  mod.rs  modes.rs  simple_keys.rs  tree_shell.rs
meta-core/src/tui/widgets/: context_bar.rs  help.rs  mod.rs  statusbar.rs  tree.rs
meta/src/: cli.rs  completions.rs  config.rs  lib.rs  main.rs  plugin.rs
meta/src/plugins/: manifest_plugin.rs  mod.rs  plugin_loader.rs
meta/src/plugins/config/: mod.rs  plugin.rs  tui_editor.rs
meta/src/plugins/exec/: iterator.rs  mod.rs  plugin.rs
meta/src/plugins/git/: mod.rs  operations.rs  plugin.rs  plugin_v2.rs
meta/src/plugins/init/: mod.rs  plugin.rs
meta/src/plugins/loop/: mod.rs  plugin.rs
meta/src/plugins/mcp/: client.rs  config.rs  mcp_server.rs  mod.rs  plugin.rs  plugin_old.rs  server.rs
meta/src/plugins/module/: discover.rs  enable.rs  mod.rs  plugin.rs  scan.rs
meta/src/plugins/plugin_manager/: install.rs  lockfile.rs  mod.rs  plugin.rs  scaffold.rs  spec.rs  verify.rs
meta/src/plugins/project/: convert.rs  mod.rs  plugin.rs
meta/src/plugins/rules/: config.rs  create.rs  docs.rs  engine.rs  mod.rs  plugin.rs  project.rs  validators.rs
meta/src/plugins/run/: mod.rs  plugin.rs
meta/src/plugins/run/tui/: live.rs  mod.rs  picker.rs  runner.rs
meta/src/plugins/shared/: git_operations.rs  mod.rs  output_manager.rs
meta/src/plugins/skill/: adapt.rs  audit.rs  git.rs  http.rs  locations.rs  mark.rs  mod.rs  picker.rs  plugin.rs  registry.rs  scan.rs  search.rs  skill_file.rs  source.rs  steal.rs
meta/src/plugins/skill/assets/meta-tool/: SKILL.md
meta/src/plugins/status/: dashboard.rs  mod.rs  plugin.rs
meta/src/plugins/worktree/: manager.rs  mod.rs  plugin.rs
meta/tests/: bare_shallow_worktree_tests.rs  completions_tests.rs  config_format_tests.rs  plugin_integrity_tests.rs  plugin_lifecycle_tests.rs  scoping_tests.rs  security_tests.rs  shallow_pull_tests.rs  skill_dest_tests.rs  worktree_clean_tests.rs  worktree_context_tests.rs
metarepo/: Cargo.toml
metarepo-plugin-sdk/: CHANGELOG.md  Cargo.toml  README.md
metarepo-plugin-sdk/src/: lib.rs
metarepo/src/: cli.rs  main.rs  plugin.rs
plugins/exec/: Cargo.toml
plugins/exec/src/: formatted.rs  lib.rs  plugin.rs
plugins/git/: Cargo.toml
plugins/git/src/: formatted.rs  lib.rs  operations.rs  plugin.rs
plugins/init/: Cargo.toml
plugins/init/src/: lib.rs  plugin.rs
plugins/loop/: Cargo.toml
plugins/loop/src/: iterator.rs  lib.rs  plugin.rs
plugins/mcp/: Cargo.toml  README.md
plugins/mcp/docs/: MCP_SERVER_USAGE.md  MCP_SETUP.md
plugins/mcp/src/: client.rs  config.rs  lib.rs  mcp_server.rs  plugin.rs  plugin_old.rs  server.rs
plugins/mcp/tests/: README.md  test_mcp_client.sh  test_mcp_server.sh
plugins/project/: Cargo.toml  NESTED_REPOS.md
plugins/project/src/: lib.rs  plugin.rs
plugins/rules/: Cargo.toml  README.md
plugins/rules/src/: config.rs  create.rs  docs.rs  engine.rs  lib.rs  plugin.rs  project.rs  validators.rs
plugins/rules/tests/: integration.rs
scripts/: install-hooks.sh  test_claude_mcp_connection.sh  test_compile.sh  test_dir_to_repo.sh  test_full_conversation.sh  test_gestalt_mcp_comprehensive.sh  test_mcp_connection.sh  test_nested_repos.sh  test_playwright_tools.sh
tests/: security_tests.rs
