[workspace]
members = [
    "meta-core",
    "gestalt",
    "plugins/init",
    "plugins/git", 
    "plugins/project",
    "plugins/exec",
    "plugins/mcp",
    "plugins/rules",
    # "plugins/loop",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "color", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
