[workspace]
members = [
    "meta-core",
    "meta",
]
exclude = [
    "examples/metarepo-plugin-example",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "color", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
console = "0.15"
