[workspace]
members = [
    "meta-core",
    "meta",
    "metarepo-plugin-sdk",
]
exclude = [
    "examples/metarepo-plugin-example",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "color", "wrap_help"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https", "ssh"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
console = "0.15"
ratatui = "0.30"
crossterm = "0.28"
tui-textarea = "0.7"
