[package]
name = "gestalt"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "gest"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
meta-core = { path = "../meta-core" }

# Plugin dependencies
meta-init = { path = "../plugins/init" }
meta-git = { path = "../plugins/git" }
meta-project = { path = "../plugins/project" }
gestalt_exec = { path = "../plugins/exec" }
gestalt-plugin-mcp = { path = "../plugins/mcp" }
gestalt-rules = { path = "../plugins/rules" }
# meta-loop = { path = "../plugins/loop" }

[dev-dependencies]
tempfile = "3.0"