[package]
name = "metarepo-core"
version = "0.3.1"
edition = "2021"
description = "Core interfaces and types for the metarepo multi-project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-core"
keywords = ["meta", "monorepo", "project", "management", "plugin"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
