[package]
name = "metarepo"
version = "0.3.2"
edition = "2021"
description = "A powerful multi-project management tool inspired by the meta npm package - manage multiple git repositories with ease"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/meta"
readme = "../README.md"
keywords = ["meta", "monorepo", "git", "project", "management"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2.1"
metarepo-core = { version = "0.3.2", path = "../meta-core" }

# Plugin dependencies (now built-in)
# Git plugin dependencies
git2 = { workspace = true }
tokio = { workspace = true }

# Rules plugin dependencies
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["all-plugins"]
all-plugins = []
minimal = []
