[package]
name = "metarepo-plugin-sdk"
version = "0.26.1"
edition = "2021"
description = "SDK for authoring external plugins for the metarepo CLI: implement a trait, call serve(), and the v1 stdio protocol is handled for you"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-plugin-sdk"
keywords = ["metarepo", "plugin", "meta", "monorepo", "sdk"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
metarepo-core = { version = "0.26.1", path = "../meta-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
