[package]
name = "metarepo"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2.1"
meta-core = { path = "../meta-core" }

# Plugin dependencies
meta-init = { path = "../plugins/init" }
meta-git = { path = "../plugins/git" }
meta-project = { path = "../plugins/project" }
metarepo_exec = { path = "../plugins/exec" }
metarepo-plugin-mcp = { path = "../plugins/mcp" }
metarepo-rules = { path = "../plugins/rules" }

[dev-dependencies]
tempfile = "3.0"
