[package]
name = "metarepo-plugin-example"
version = "0.1.0"
edition = "2021"
authors = ["Metarepo Contributors"]
description = "Example external plugin for metarepo CLI, built on metarepo-plugin-sdk"
documentation = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
repository = "https://github.com/codyaverett/metarepo"
license = "MIT"
keywords = ["metarepo", "plugin", "meta", "monorepo", "example"]
categories = ["development-tools"]

[dependencies]
metarepo-plugin-sdk = { version = "0.20", path = "../../metarepo-plugin-sdk" }
anyhow = "1.0"

[[bin]]
name = "metarepo-plugin-example"
path = "src/main.rs"

[lib]
name = "metarepo_plugin_example"
path = "src/lib.rs"
