[package]
name = "metarepo-exec"
version = "0.2.1"
edition = "2021"
description = "Execute commands across multiple repositories for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-exec"
keywords = ["meta", "exec", "command", "parallel", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metarepo-core = { version = "0.2.1", path = "../../meta-core" }
