[package]
name = "meta-git"
version = "0.2.1"
edition = "2021"
description = "Git operations across multiple repositories for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/gestalt"
homepage = "https://github.com/codyaverett/gestalt"
documentation = "https://docs.rs/meta-git"
keywords = ["meta", "git", "repository", "version-control", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
meta-core = { version = "0.2.1", path = "../../meta-core" }