[package]
name = "metarepo-git"
version = "0.2.1"
edition = "2021"
description = "Git operations across multiple repositories for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-git"
keywords = ["meta", "git", "repository", "version-control", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
metarepo-core = { version = "0.2.1", path = "../../meta-core" }