[package]
name = "metarepo-init"
version = "0.2.1"
edition = "2021"
description = "Initialize new meta repositories for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/gestalt"
homepage = "https://github.com/codyaverett/gestalt"
documentation = "https://docs.rs/metarepo-init"
keywords = ["meta", "init", "repository", "project", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
metarepo-core = { version = "0.2.1", path = "../../meta-core" }

[dev-dependencies]
tempfile = "3.0"