[package]
name = "meta-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.0"
meta = { path = "../../meta" }

[dev-dependencies]
tempfile = "3.0"