[package]
name = "meta-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.0"
metarepo-core = { path = "../../meta-core" }

[dev-dependencies]
tempfile = "3.0"