[package]
name = "metarepo-mcp"
version = "0.2.1"
edition = "2021"
description = "Model Context Protocol (MCP) support for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-mcp"
keywords = ["meta", "mcp", "ai", "llm", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
metarepo-core = { version = "0.2.1", path = "../../meta-core" }
anyhow = "1.0"
clap = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
tracing = "0.1"

[lib]
name = "metarepo_mcp"
path = "src/lib.rs"