[package]
name = "meta-project"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
meta-core = { path = "../../meta-core" }
