[package]
name = "meta-project"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
colored = "2.1"
meta-core = { path = "../../meta-core" }
