[package]
name = "metarepo-project"
version = "0.2.1"
edition = "2021"
description = "Project creation and import for the metarepo multi-project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/gestalt"
homepage = "https://github.com/codyaverett/gestalt"
documentation = "https://docs.rs/metarepo-project"
keywords = ["meta", "project", "create", "import", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
colored = "2.1"
metarepo-core = { version = "0.2.1", path = "../../meta-core" }
