[package]
name = "gestalt-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-core = { path = "../../meta-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
glob = "0.3"
walkdir = "2.4"
regex = "1.10"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"