[package]
name = "metarepo-rules"
version = "0.2.1"
edition = "2021"
description = "Validation rules and constraints for the metarepo project management tool"
authors = ["Metarepo Contributors"]
license = "MIT"
repository = "https://github.com/codyaverett/metarepo"
homepage = "https://github.com/codyaverett/metarepo"
documentation = "https://docs.rs/metarepo-rules"
keywords = ["meta", "rules", "validation", "constraints", "management"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
metarepo-core = { version = "0.2.1", path = "../../meta-core" }
metarepo-project = { version = "0.2.1", path = "../project" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
walkdir = "2.4"
regex = "1.10"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
